--- a/src/main/resources/web/visualisator/index.html
+++ b/src/main/resources/web/visualisator/index.html
@@ -8,6 +8,7 @@
   			.outsideWrapper{
 			    width:3000px; height:2000px;
 			    margin:0px 0px;
+			    display: inline-block;
 			}
 			.insideWrapper{
 			    width:100%; height:100%;
@@ -25,25 +26,52 @@
 			.coveringButton{
 				position:absolute; top:50px; left:50px;
 			}
-			.formBlock {
+			.configBlock {
 			    display: inline-block;
-			    width: 300px;
+			    width: 700px;
+			    vertical-align: top;
+			    font-size: 35px;
+			}
+			.formBlock {
+			    width: 700px;
+			    margin: 10px;
+			}
+			.instructionsBlock {
+			    width: 700px;
+			    margin: 10px;
+			    padding: 10px;
 			}
 			.dataBlock {
-			    display: inline-block;
-			    width: 500px;
-			    overflow: auto;
-			    border: solid 1px;
-			    height: 100px;
+			    width: 700px;
+			    height: 1000px;
+			    margin: 10px;
+			    padding: 10px;
 			}
+			.dataFieldset {
+			    width: 700px;
+			    overflow: auto;
+			    height: 1000px;
+			}
+			button,input {
+			    font-size: 25px;
+                padding: 10px;
+            }
     </style>
 
+    <!-- https://createjs.com - Voir EaselJs pour le canvas et TweenJs pour les animations -->
     <script src="./createjs.min.js"></script>
     <script src="./tweenjs.min.js"></script>
 </head>
 <body onload="init();">
 
-<div style="margin-bottom: 20px;">
+<div class="outsideWrapper">
+    <div class="insideWrapper">
+        <img src="2021/table.svg" class="coveredImage">
+        <canvas id="canvas" class="coveringCanvas" width="3000" height="2000"></canvas>
+    </div>
+</div>
+
+<div class="configBlock">
     <form id="formTable" name="formTable" class="formBlock" onsubmit="event.preventDefault(); loadTable();">
         <fieldset>
             <legend>Configuration de la table</legend>
@@ -58,21 +86,20 @@
             <legend>Strat du générateur</legend>
             <input type="file"
                    id="strat" name="strat"
-                   accept="text/plain"/>
+                   accept="application/json"/>
             <button type="submit">Submit</button>
         </fieldset>
     </form>
-    <div class="dataBlock" style="width: 100px;">
-        Instructions : <br>
-        <button onclick="nextInstruction();">Next</button>
+    <div class="instructionsBlock">
+        <fieldset>
+            <legend>Instructions</legend>
+            <button onclick="nextInstruction();">Next</button>
+        </fieldset>
     </div>
-    <div class="dataBlock" id="data"></div>
-</div>
-
-<div class="outsideWrapper">
-    <div class="insideWrapper">
-        <img src="2021/table.svg" class="coveredImage">
-        <canvas id="canvas" class="coveringCanvas" width="3000" height="2000"></canvas>
+    <div class="dataBlock">
+        <fieldset id="data" class="dataFieldset">
+            <legend>Exécution</legend>
+        </fieldset>
     </div>
 </div>
 
@@ -106,6 +133,7 @@
   }
 
   function moveRobot(x, y, rotation) {
+    console.log('moveRobot('+x+','+y+','+rotation+')');
     var shape = new createjs.Shape();
     shape.graphics
         .setStrokeStyle(3)
@@ -256,7 +284,7 @@
     if (file.files.length) {
         var reader = new FileReader();
         reader.onload = function (e) {
-            strat = e.target.result.split('\n');
+            strat = JSON.parse(e.target.result);
             stratIndex = 0;
         };
         reader.readAsBinaryString(file.files[0]);
@@ -271,16 +299,14 @@
     }
     var instruction = strat[stratIndex];
     stratIndex++;
-    var regexpPosition = /Position{x=(\d+), y=(\d+), theta=(-?\d+\.?\d*)}/;
+
     var regexpZone = /(delete|add)-zone#(.+)/;
-    var parsePosition = regexpPosition.exec(instruction);
-    var parseZone = regexpZone.exec(instruction);
+    var parseZone = regexpZone.exec(instruction.command);
+
     var dataDiv = document.getElementById('data');
-    dataDiv.insertAdjacentHTML('beforeend', instruction + '<br>');
+    dataDiv.insertAdjacentHTML('beforeend', '<strong>' + instruction.task + '</strong> : ' + instruction.command + '<br>');
     dataDiv.scrollTop = dataDiv.scrollHeight;
-    if (parsePosition !== null) {
-        moveRobot(parseInt(parsePosition[2]), parseInt(parsePosition[1]), parseFloat(parsePosition[3]));
-    }
+    moveRobot(instruction.position.y, instruction.position.x, instruction.position.theta);
     if (parseZone !== null) {
         if (parseZone[1] === 'delete') {
             deleteZone(parseZone[2]);
