stream des logs qui fonctionne !!

--- a/src/main/resources/web/visualisator/index.html
+++ b/src/main/resources/web/visualisator/index.html
@@ -462,6 +462,8 @@
         this.onmessage = function(event) {
             console.log("Message:", event.data);
         };
+
+        this.send("loggerListener");
     };
   }
 </script>
