rajout configuration ax12 drapeau dans l'IG de paramétrage des AX

--- a/src/main/resources/web/annee/2020.html
+++ b/src/main/resources/web/annee/2020.html
@@ -41,6 +41,8 @@
         <input type="checkbox" name="princess_ax12" id="princess_ax12_7" checked="checked">
         <label for="princess_ax12_8">Bras droit</label>
         <input type="checkbox" name="princess_ax12" id="princess_ax12_8" checked="checked">
+        <label for="princess_ax12_9">Drapeau</label>
+        <input type="checkbox" name="princess_ax12" id="princess_ax12_9" checked="checked">
         <br><br>
         <button class="ui-button ui-widget ui-corner-all actions-records__ax12_new">
             <span class="ui-icon ui-icon-bullet"></span> Rec Nouveau
@@ -185,6 +187,12 @@
             <option value="8">8</option>
             <option value="9">9</option>
             <option value="10">10</option>
+            <option value="11">11</option>
+            <option value="12">12</option>
+            <option value="13">13</option>
+            <option value="14">14</option>
+            <option value="15">15</option>
+            <option value="16">16</option>
         </select>#
         </div><div>
         Angle <input class="action-item__ax12-angle" name="spinner" value="10" size="5">°
