--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -3,6 +3,7 @@
         <title>ESIALRobotik Princess</title>
     </head>
     <body>
+        <h1><a href="annee/2022.html"><img src="annee/logo.png" height="25px"> 2022 - Fenwick Princess Actuator 2022 Configurator</a></h1>
         <h1><a href="annee/2021.html"><img src="annee/logo.png" height="25px"> 2021 - Digital Princess Actuator 2021 Configurator</a></h1>
         <h1><a href="annee/2021_pmi.html"><img src="annee/logo.png" height="25px"> 2021 - Picrate Princess Actuator 2021 Configurator</a></h1>
         <h1><a href="annee/2020.html"><img src="annee/logo.png" height="25px"> 2020 - Grabing Princess Actuator Configurator</a></h1>
