Ajout configurateur AX12 2022 robot pmi + refacto pour avoir qu'un seul js 2022 pour les 2 robots

--- a/src/main/resources/web/annee/2022_pmi.html
+++ b/src/main/resources/web/annee/2022_pmi.html
@@ -24,20 +24,18 @@
     <h3 class="u-no-margin-top">Enregistrement des Pools</h3>
     <fieldset class="actions-records__ax12">
         <legend>Position AX12</legend>
-        <input type="checkbox" name="princess_ax12" id="princess_ax12_1" checked="checked" data-ax12-id="9">
-        <label for="princess_ax12_1">Sonde Gauche</label>
-        <input type="checkbox" name="princess_ax12" id="princess_ax12_2" checked="checked" data-ax12-id="14">
-        <label for="princess_ax12_2">Sonde Droite</label>
+        <input type="checkbox" name="princess_ax12" id="princess_ax12_1" checked="checked" data-ax12-id="15">
+        <label for="princess_ax12_1">Pivot gauche</label>
+        <input type="checkbox" name="princess_ax12" id="princess_ax12_2" checked="checked" data-ax12-id="6">
+        <label for="princess_ax12_2">Ventouse gauche</label>
         <br><br>
-        <input type="checkbox" name="princess_ax12" id="princess_ax12_3" checked="checked" data-ax12-id="17">
-        <label for="princess_ax12_3">Bras Gauche</label>
-        <input type="checkbox" name="princess_ax12" id="princess_ax12_4" checked="checked" data-ax12-id="16">
-        <label for="princess_ax12_4">Bras Droit</label>
+        <input type="checkbox" name="princess_ax12" id="princess_ax12_3" checked="checked" data-ax12-id="8">
+        <label for="princess_ax12_3">Pivot droit</label>
+        <input type="checkbox" name="princess_ax12" id="princess_ax12_4" checked="checked" data-ax12-id="13">
+        <label for="princess_ax12_4">Ventouse droit</label>
         <br><br>
-        <input type="checkbox" name="princess_ax12" id="princess_ax12_5" checked="checked" data-ax12-id="7">
-        <label for="princess_ax12_5">Fourche</label>
-        <input type="checkbox" name="princess_ax12" id="princess_ax12_6" checked="checked" data-ax12-id="2">
-        <label for="princess_ax12_6">Bras Ascenseur</label>
+        <input type="checkbox" name="princess_ax12" id="princess_ax12_5" checked="checked" data-ax12-id="10">
+        <label for="princess_ax12_5">Pivot arrière</label>
         <br><br>
         <button class="ui-button ui-widget ui-corner-all actions-records__ax12_new">
             <span class="ui-icon ui-icon-bullet"></span> Rec Nouveau
