--- a/src/main/resources/web/annee/2022.html
+++ b/src/main/resources/web/annee/2022.html
@@ -188,6 +188,7 @@
             <option value="14">14</option>
             <option value="15">15</option>
             <option value="16">16</option>
+            <option value="17">17</option>
         </select>#
         </div><div>
         Angle <input class="action-item__ax12-angle" name="spinner" value="10" size="5">°
